--- a/src/application.properties
+++ b/src/application.properties
@@ -1,2 +1,2 @@
-jdbc.driver=org.postgresql.Driver 
-jdbc.url=jdbc:postgresql:verein?user=postgres&password=admin
+jdbc.driver=org.postgresql.Driver
+jdbc.url=jdbc:postgresql:postgres?user=postgres&password=admin
