support no mandat

--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
 					<url>http://localhost:8080/manager/text</url>
 					<server>TomcatServer</server>
 					<username>admin</username>
-					<password>password</password>
+					<password>admin</password>
 				</configuration>
 			</plugin>
 		</plugins>
